--- a/res/layout/fragment.xml
+++ b/res/layout/fragment.xml
@@ -92,6 +92,16 @@
                     android:text="Add comment"
                     android:id="@+id/commentButton"
                     android:visibility="invisible"/>
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pokaż miejsce na mapie"
+                    android:id="@+id/showOnMapPlace" android:layout_gravity="center_horizontal" android:visibility="invisible"/>
+            <Button
+                    android:layout_width="221dp"
+                    android:layout_height="wrap_content"
+                    android:text="Pokaz zdjecia"
+                    android:id="@+id/showPhotosButton" android:layout_gravity="center_horizontal" android:visibility="invisible"/>
 
         </LinearLayout>
     </ScrollView>
